--- a/src/polybar/blocks/colors.ini
+++ b/src/polybar/blocks/colors.ini
@@ -19,7 +19,7 @@
 ;;1f2616
 
 ;; main colors
-background = #150431
+background = #aa150431
 background-alt = #423949
 foreground = #FFFFFF
 foreground-alt = #FFFFFF
