--- a/src/kitty/kitty.conf
+++ b/src/kitty/kitty.conf
@@ -1,15 +1,15 @@
 # vim:fileencoding=utf-8:foldmethod=marker
 
-#: Fonts {{{
+ Fonts {{{
 
 #: kitty has very powerful font management. You can configure
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-# font_family      monospace
-# bold_font        auto
-# italic_font      auto
-# bold_italic_font auto
+font_family      Monocraft
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
@@ -227,7 +227,7 @@
 #: it looks good. Then switch to a light theme and adjust the first
 #: parameter until the perceived thickness matches the dark theme.
 
-#: }}}
+}}}
 
 #: Cursor customization {{{
 
@@ -725,7 +725,7 @@
 
 #: }}}
 
-#: Window layout {{{
+Window layout {{{
 
 # remember_window_size  yes
 # initial_window_width  640
@@ -879,7 +879,7 @@
 #: insensitive, from the set [0-9A-Z]. Specify your preference as a
 #: string of characters.
 
-# confirm_os_window_close -1
+confirm_os_window_close 0
 
 #: Ask for confirmation when closing an OS window or a tab with at
 #: least this number of kitty windows in it by window manager (e.g.
@@ -894,7 +894,7 @@
 #: want confirmation when closing individual windows, you can map the
 #: close_window_with_confirmation action.
 
-#: }}}
+ }}}
 
 #: Tab bar {{{
 
@@ -1066,7 +1066,7 @@
 
 #: The foreground and background colors.
 
-background_opacity 0.8
+background_opacity 0.7
 
 #: The opacity of the background. A number between zero and one, where
 #: one is opaque and zero is fully transparent. This will only work if
